Dec. 5 2012
Fixed a minus calculation bug, thanks to Bill Walker for pointing it out

Nov. 14 2012
Fixed a cross routine RETURN bug, thanks to Bruce Kendall for pointing it out

Sep. 12 2012
Fixed a bug in ASC
Fixed a label parsing, jumping bug, thanks to Ahmad Hawwash for pointing above two issues out
Fixed a crash bug in IF statement
Added divide by zero processing
Added calculation error raising

Sep. 1 2012
Fixed a redisposing bug when retrieving a string argument, thanks to Ahmad Hawwash for pointing it out
Fixed a memory leak after retrieving a composited string argument

Aug. 29 2012
Modified an odd string comparison behavior, thanks to Matthias Nott for testing it out
Added a warning system, disabled warning as default
Improved compatibility with GCC

Aug. 3 2012
Implemented memory occupation statistics
Improved compatibility on 64bit systems
Fixed some warnings under a stricter mode

Jul. 21 2012
Added a compatibility macro for PRINT a newline
Added an mb_attempt_func_end C API
Fixed a unary minus symbol parsing bug

Jul. 19 2012
Fixed a crash bug caused by a mistake in calculation priority table, thanks to Bruce Kendall for pointing it out

Jul. 10 2012
Implemented KILL command
Fixed a negative calculation bug
Added an invalid identifier usage error handling
Avoided some warnings on gcc

Jul. 5 2012
Implemented LIST, EDIT, LOAD, SAVE commands

Jul. 4 2012
Fixed some crash bugs
Fixed some memory leaks

Jul. 3 2012
Modified/added math functions: FLOOR, CEIL, FIX
Fixed an INPUT type issue
Changed float number formatting from using "%f" to "%g" in PRINT, thanks to Bruce Kendall for pointing above three issues out
Refactored the way to load a script file
Done several small improvements

Jun. 29 2012
Fixed a newline mistake in PRINT

Jun. 29 2012
Implemented customizable print functor
Improved PRINT statement
Fixed an infinity loop bug in RND function
Fixed some crash bugs

Jun. 28 2012