@@ -3,9 +3,9 @@ Introduction
 	in pure C with about 5000 lines of source code. Its grammar is similar
 	to structured BASIC in early era, but without line number. It is aimed to
 	be either an embeddable scripting language or a standalone interpreter. The
-	core is pretty light; all in a C source file and a header file. You can
-	combine MY-BASIC with an existing C / C++ / Objective-C project easily,
-	that can make them more powerful.
+	core is pretty light; all in a C source file and an associated header file.
+	You can combine MY-BASIC with an existing C / C++ / Objective-C project
+	easily, that can make them more powerful.
 
 Main features
 	Written in clean ANSI C, source portable
